--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.22.0)
 
 project(my-cmake-project)
-set(CMAKE_CXX_STANDARD 11)
 add_executable(Program main.cpp)
+set_property(TARGET Program PROPERTY CXX_STANDARD 11)
